Added the default packages for testing
Added in the default packages that are needed to be able to do JEST testing using AIRNB Enzyme testing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,12 @@
 
     "watch": false,
     "pretty": true,
-    "importHelpers": true
+    "importHelpers": true,
+
+    "baseUrl": "src",
+    "declaration": false,
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "typeRoots": ["node_modules/@types"]
   }
 }
