--- a/package.json
+++ b/package.json
@@ -61,13 +61,17 @@
   "devDependencies": {
     "@types/axios": "0.14.0",
     "@types/chrome": "0.0.82",
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/gsap": "1.20.2",
+    "@types/jest": "^24.0.23",
     "@types/leveldown": "4.0.0",
     "@types/levelup": "3.1.0",
     "@types/nedb": "1.8.7",
     "@types/node": "11.13.4",
     "@types/react": "16.8.13",
     "@types/react-dom": "16.8.4",
+    "@types/react-test-renderer": "^16.9.1",
     "@types/styled-components": "4.1.14",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "0.19.0",
@@ -80,15 +84,20 @@
     "electron-builder": "20.39.0",
     "electron-is-dev": "^1.1.0",
     "electron-rebuild": "^1.8.6",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "extract-css-chunks-webpack-plugin": "^4.6.0",
     "file-loader": "^4.2.0",
     "fuse-box": "^4.0.0-next.146",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "log-update": "3.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pm2": "^4.1.2",
     "prettier": "1.17.0",
+    "react-test-renderer": "^16.12.0",
     "terser": "^4.3.9",
+    "ts-jest": "^24.2.0",
     "tslint": "5.15.0",
     "tslint-config-airbnb": "5.11.1",
     "tslint-config-prettier": "1.18.0",
