--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "lint": "tslint \"src/**/*.ts*\"",
     "lint-fix": "prettier --write \"src/**/*.ts*\" && tslint \"src/**/*.ts*\" --fix",
     "postinstall": "electron-builder install-app-deps",
-    "download-filters": "node tools/download-filters.js"
+    "download-filters": "node tools/download-filters.js",
+    "test": "jest --coverage --coverageDirectory=output/coverage/jest"
   },
   "pre-commit": [
     "lint-fix"
@@ -153,6 +154,7 @@
     "icojs": "0.12.3",
     "is-online": "^8.2.0",
     "javascript-time-ago": "^2.0.2",
+    "jest-css-modules-transform": "^3.1.0",
     "leveldown": "5.0.1",
     "levelup": "4.0.1",
     "lifeguard-api": "^1.0.4",
