removed unused imports that would stop testing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,11 +26,11 @@
     "watch": false,
     "pretty": true,
     "importHelpers": true,
-
     "baseUrl": "src",
     "declaration": false,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "typeRoots": ["node_modules/@types"]
-  }
+  },
+  "include": ["./src/**/*", "./custom.d.ts", "assetsTransformer.js"]
 }
